--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		
 		<div class="swiper-content-slide">
 			<div class="row" style="height: 70vh;">
-				<div class="col-md-6 d-flex justify-content-center align-items-center">
+				<div class="col-md-6 d-flex justify-content-center align-items-center d-none d-sm-none d-md-flex">
 					<h1>img goes here</h1>
 				</div>
 				<div class="col-md-6 d-flex align-items-center justify-content-center">
@@ -105,8 +105,42 @@
 			
 		</div>
 	  </div>
-	  <div class="swiper-slide">Slide 2</div>
-	  <div class="swiper-slide">Slide 3</div>
+	  <div class="swiper-slide"><div class="swiper-content-slide">
+		<div class="row" style="height: 70vh;">
+			<div class="col-md-6 d-flex justify-content-center align-items-center d-none d-sm-none d-md-flex">
+				<h1>img goes here</h1>
+			</div>
+			<div class="col-md-6 d-flex align-items-center justify-content-center">
+				<div class="swiper-content-slide-text">
+					<h1>01.</h1>
+					<h1>Emergency?</h1>
+					<h1>Find Nearest</h1>
+					<h1>Medical Facility</h1>
+					<button class="btn btn-primary">View Hospitals</button>
+					<button class="btn btn-outline-primary">View Doctors</button>
+				</div>
+			</div>
+		</div>
+		
+	</div></div>
+	  <div class="swiper-slide"><div class="swiper-content-slide">
+		<div class="row" style="height: 70vh;">
+			<div class="col-md-6 d-flex justify-content-center align-items-center d-none d-sm-none d-md-flex">
+				<h1>img goes here</h1>
+			</div>
+			<div class="col-md-6 d-flex align-items-center justify-content-center">
+				<div class="swiper-content-slide-text">
+					<h1>01.</h1>
+					<h1>Emergency?</h1>
+					<h1>Find Nearest</h1>
+					<h1>Medical Facility</h1>
+					<button class="btn btn-primary">View Hospitals</button>
+					<button class="btn btn-outline-primary">View Doctors</button>
+				</div>
+			</div>
+		</div>
+		
+	</div></div>
 	  ...
 	</div>
 	<!-- If we need pagination -->
@@ -191,7 +225,7 @@
 		  <p>This is a quick demo of slide-up effect using CSS animation when hover the box. No JS required!</p>
 		</div>
 	  </div>
-	  <div class="box col-md-3">
+	  <div class="box col-md-3 d-none d-sm-none d-md-block">
 		<div class="content">
 		  <h1>Content to be added</h1>
 		  <p>This is the additional content to be added in the yellow part of the box.</p>
@@ -201,7 +235,7 @@
 		  <p>This is a quick demo of slide-up effect using CSS animation when hover the box. No JS required!</p>
 		</div>
 	  </div>
-	  <div class="box col-md-3">
+	  <div class="box col-md-3 d-none d-sm-none d-md-block">
 		<div class="content">
 		  <h1>Content to be added</h1>
 		  <p>This is the additional content to be added in the yellow part of the box.</p>
@@ -215,7 +249,10 @@
 	</div>
 	
 	  
-</section>
+</section> 
+
+
+
 
 <!-- =====================how it works============================== -->
 <section class="how-it-works mt-3">
