--- a/index.html
+++ b/index.html
@@ -340,14 +340,14 @@
 
 <section class="how-it-works mt-3">
 <div class="hero-text text-center w-75 m-auto mt-5">
-	<div class="invisible" style="margin: 35px;">.</div>
-	<p class="">We Made it simple</p>
-	<h1><span class="font-weight-bold">How It</span><span class="carousel-heading-text-red font-weight-bolder"> Works?</span> </h1>
+	<div class="invisible" style="margin: 10px;">.</div>
+	<p class="mb-0">We Made it simple</p>
+	<h1 class="mt-0"><span class="font-weight-bold">How It</span><span class="carousel-heading-text-red font-weight-bolder"> Works?</span> </h1>
 	<div class="d-flex justify-content-center align-items-center">
 
 		<p class="w-75 text-center">Lorem ipsum dolor amet consectetur adipisicing eliteiuim sete eiusmod tempor incididunt ut labore etnalom dolore magna aliqua udiminimate veniam quis norud.</p>
 	</div>
-	<div class="invisible" style="margin: 35px;">.</div>
+	<!-- <div class="invisible" style="margin: 15px;">.</div> -->
 </div>
 <div class="row w-75 d-flex justify-content-center align-items-center m-auto text-center">
 	<div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
@@ -370,7 +370,7 @@
 	</div>
 
 	
-	<div class="invisible" style="margin: 35px;">.</div>
+	<div class="invisible" style="margin: 7px;">.</div>
 </div>
 
 </section>
