--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 		  <div class="contact-info d-flex align-items-center">
 		<p class="font-weight-bold">Emergency Help!</p>
 	     </div>
-		  <div class="d-none d-sm-flex social-links align-items-center">
-			<a href="#" class="twitter"><i class="bi bi-twitter fa-3x"></i></a>
-			<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-			<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-			<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+		  <div class="d-flex social-links align-items-center">
+			<a href="#" class="twitter" style="font-size: 25px;"><i class="bi bi-twitter fa-3x"></i></a>
+			<a href="#" class="facebook"  style="font-size: 25px;"><i class="bi bi-facebook"></i></a>
+			<a href="#" class="instagram"  style="font-size: 25px;"><i class="bi bi-instagram"></i></a>
+			<a href="#" class="linkedin"  style="font-size: 25px;"><i class="bi bi-linkedin"></i></i></a>
 		  </div>
 		</div>
 	  </div>
@@ -244,7 +244,7 @@
 	<div class="d-flex row w-100 overflow-hidden">
 
 
-		<div class="box col-md-3 box-primary">
+		<div class="box col-md-3 box-success">
 			<div class="content services2-bg">
 			
 			</div>
@@ -630,41 +630,41 @@
 <section class="Hospitals my-5">
 	<h1 class="text-center text-white " style="background-color: #1371A1; margin-bottom: -1px;padding: 1%;" >Our Best <span class="carousel-heading-text-red" >Hospitals</span> for your medical treatment</h1>
 	
-	<div class="swiper hospital_slider hospital-wrapper w-100" style="padding: 2%;" id="hospital_slider">
+	<div class="swiper hospital_slider hospital-wrapper w-100" style="padding: 2%;height: auto;" id="hospital_slider">
 		<div class="swiper-wrapper hospital-wrapper">
 		  <div class="swiper-slide d-flex justify-content-center align-items-center flex-column">
 			
-			<img src="./assets/hospital-1.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-11.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-1</h3>
 		  </div>
 		  <div class="swiper-slide d-flex justify-content-center align-items-center flex-column">
 			
-			<img src="./assets/hospital-1.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-44.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-2</h3>
 		  </div>
 		  <div class="swiper-slide d-flex justify-content-center align-items-center flex-column">
 			
-			<img src="./assets/hospital-1.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-33.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-3</h3>
 		  </div>
 		  <div class="swiper-slide d-flex justify-content-center align-items-center flex-column">
 			
-			<img src="./assets/hospital-1.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-11.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-4</h3>
 		  </div>
 		  <div class="swiper-slide d-flex flex-column justify-content-center align-items-center">
 
-			<img src="./assets/hospital-2.webp" class="hospital-img" alt="">
+			<img src="./assets/hospital-33.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-5</h3>
 		 
 	
 	</div>
 		  <div class="swiper-slide d-flex flex-column justify-content-center align-items-center">
-			<img src="./assets/hospital-3.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-44.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-6</h3>	
 		</div>
 		<div class="swiper-slide flex-column d-flex justify-content-center align-items-center">
-			<img src="./assets/hospital-3.jpg" class="hospital-img" alt="">
+			<img src="./assets/hospital-11.png" class="hospital-img" alt="">
 			<h3 class="text-white">hospital-7</h3>
 		 
 		</div>
