--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<a href="./index.html" class="brand">Brand</a>
 			<span class="overlay"></span>
 			<div class="menu m-auto" id="menu">
-				<ul class="menu-inner">
+				<ul class="menu-inner d-flex justify-content-center align-items-center">
 					<li class="menu-item"><a class="menu-link poppins" href="#">Home</a></li>
 					<li class="menu-item"><a class="menu-link" href="#">About</a></li>
 					<li class="menu-item"><a class="menu-link" href="#">Service</a></li>
