--- a/index.html
+++ b/index.html
@@ -706,14 +706,14 @@
 
 
 <!-- ===========================footer============================================== -->
-<footer class="w-100 overflow-hidden mt-2">
+<footer class="w-100  overflow-hidden mt-2">
 	
-	<div class="upper-footer">
+	<div class="upper-footer ">
 		<div class="invisible" style="margin-bottom: 40px;">.</div>
-		<div class="row">
+		<div class="row ">
 			<div class="col-md-3 col-sm-6">
-				<ul>
-					<li><h5>By <span class="red-text">Speciality</span> </h5></li>
+				<ul class="footer-list">
+					<h5>By <span class="red-text">Speciality</span></h5>
 						<li><a href="#">Surgery</a></li>
 						<li><a href="#">Allergy & Immunology</a></li>
 						<li><a href="#">Anesthesiology</a></li>
@@ -723,8 +723,8 @@
 			</div>
 			<div class="col-md-3 col-sm-6">
 			
-				<ul>
-					<li><h5>Doctors In <span class="red-text">USA</span> </h5></li>
+				<ul class="footer-list">
+					<h5>Doctors In <span class="red-text">USA</span> </h5>
 						<li><a href="#">Allergy & Immunology in Turkey</a></li>
 						<li><a href="#">Anesthesiology in Turkey</a></li>
 						<li><a href="#">Dermatology in Turkey</a></li>
@@ -734,8 +734,8 @@
 			</div>
 			<div class="col-md-3 col-sm-6">
 				
-				<ul>
-					<li><h5>Doctors In <span class="red-text">India</span> </h5></li>
+				<ul class="footer-list">
+					<h5>Doctors In <span class="red-text">India</span> </h5>
 						<li><a href="#">Physical medicine in India</a></li>
 						<li><a href="#">Preventive medicine in India</a></li>
 						<li><a href="#">Psychiatry in India</a></li>
@@ -745,8 +745,8 @@
 			</div>
 			<div class="col-md-3 col-sm-6">
 				
-				<ul>
-						<li><h5>By <span class="red-text">Location</span> </h5></li>
+				<ul class="footer-list">
+						<h5>By <span class="red-text">Location</span> </h5>
 						<li><a href="#">United Kingdom( UK )</a></li>
 						<li><a href="#">India</a></li>
 						<li><a href="#">Australia</a></li>
