--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 					</li>
 				</ul>
 			</div>
-			<i class="bi bi-cart2 m-0"></i>
+			<i class="bi bi-cart" style="font-size:24px"></i>
+            <span class='badge badge-warning' id='lblCartCount'>0</span>
 			<a href="./index.html" class="menu-block">Login</a>
 		<div class="burger" id="burger">
 				<span class="burger-line"></span>
