--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
 				</div>
 				<div class="d-flex h-50 justify-content-center align-items-center">
-					<button class="btn btn-lg btn-outline-success">
+					<button class="btn btn-lg btn-outline-success services-button">
 					 book now
 				 </button>
 	 
@@ -278,7 +278,7 @@
 				</div>
 
 			<div class="d-flex h-50 justify-content-center align-items-center">
-				<button class="btn btn-lg btn-outline-primary">
+				<button class="btn btn-lg btn-outline-primary services-button">
 				 book now
 			 </button>
  
@@ -298,7 +298,7 @@
 			</div>
 
 			<div class="d-flex h-50 justify-content-center align-items-center ">
-				<button class="btn btn-lg btn-outline-warning">
+				<button class="btn btn-lg btn-outline-warning services-button">
 				 book now
 			 </button>
  
@@ -319,7 +319,7 @@
 				
 	
 			<div class="d-flex h-50 justify-content-center align-items-center">
-				<button class="btn btn-lg btn-outline-danger">
+				<button class="btn btn-lg btn-outline-danger services-button">
 				 book now
 			 </button>
  
